@@ -1,3 +1,9 @@
+2013-06-01 Riccardo Mottola <rm@gnu.org>
+
+	* AppController
+	* localclient.m
+	Fix memory leak.
+
 2013-05-27 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.[h,m]
